// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideControls component moves backward from 5 to 4 1`] = `
<div>
  <div
    class="SlideControls-root-73"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-100 iconButton IconButton-medium-106 IconButton-text-102"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-79"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-78"
    >
      <span
        class="SlideControls-slidingSlot-77"
      >
        <span
          class="SlideControls-numbers-80 SlideControls-down-82"
        >
          <span
            class="SlideControls-number-85 SlideControls-active-84"
          >
            04
          </span>
          <span
            class="SlideControls-number-85"
          >
            05
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-83"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-100 iconButton IconButton-medium-106 IconButton-text-102"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-79"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves forward from 1 to 2 1`] = `
<div>
  <div
    class="SlideControls-root-37"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-64 iconButton IconButton-medium-70 IconButton-text-66"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-43"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-42"
    >
      <span
        class="SlideControls-slidingSlot-41"
      >
        <span
          class="SlideControls-numbers-44 SlideControls-up-45"
        >
          <span
            class="SlideControls-number-49"
          >
            01
          </span>
          <span
            class="SlideControls-number-49 SlideControls-active-48"
          >
            02
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-47"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-64 iconButton IconButton-medium-70 IconButton-text-66"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-43"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves from first to last number 1`] = `
<div>
  <div
    class="SlideControls-root-145"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-172 iconButton IconButton-medium-178 IconButton-text-174"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-151"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-150"
    >
      <span
        class="SlideControls-slidingSlot-149"
      >
        <span
          class="SlideControls-numbers-152 SlideControls-down-154"
        >
          <span
            class="SlideControls-number-157 SlideControls-active-156"
          >
            05
          </span>
          <span
            class="SlideControls-number-157"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-155"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-172 iconButton IconButton-medium-178 IconButton-text-174"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-151"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves from last to first number 1`] = `
<div>
  <div
    class="SlideControls-root-109"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-136 iconButton IconButton-medium-142 IconButton-text-138"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-115"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-114"
    >
      <span
        class="SlideControls-slidingSlot-113"
      >
        <span
          class="SlideControls-numbers-116 SlideControls-up-117"
        >
          <span
            class="SlideControls-number-121"
          >
            05
          </span>
          <span
            class="SlideControls-number-121 SlideControls-active-120"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-119"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-136 iconButton IconButton-medium-142 IconButton-text-138"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-115"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders correctly 1`] = `
<div>
  <div
    class="SlideControls-root-1"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-28 iconButton IconButton-medium-34 IconButton-text-30"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="SlideControls-middleContainer-6"
    >
      <span
        class="SlideControls-slidingSlot-5"
      >
        <span
          class="SlideControls-numbers-8"
        >
          <span
            class="SlideControls-number-13 SlideControls-active-12"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="SlideControls-total-11"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-28 iconButton IconButton-medium-34 IconButton-text-30"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root SlideControls-chevron-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
